@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-01T01:56:12Z",
-  "count_outdated" : 2367,
-  "uniques_outdated" : 557,
-  "count" : 2412,
-  "uniques" : 587,
+  "timestamp" : "2022-09-01T08:26:28Z",
+  "count_outdated" : 2368,
+  "uniques_outdated" : 558,
+  "count" : 2413,
+  "uniques" : 588,
   "clones" : [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-20T00:00:00Z",
       "count": 1,
@@ -95,6 +88,13 @@
       "count_minmax": [ 1, 13 ],
       "uniques": 9,
       "uniques_minmax": [ 1, 9 ]
+    },
+    {
+      "timestamp": "2022-09-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
