@@ -1,12 +1,7 @@
 {
   "count": 45,
-  "uniques": 18,
+  "uniques": 17,
   "clones": [
-    {
-      "timestamp": "2022-08-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-20T00:00:00Z",
       "count": 1,
@@ -66,6 +61,11 @@
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 13,
       "uniques": 9
+    },
+    {
+      "timestamp": "2022-09-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
