@@ -1,3 +1,11 @@
+2022-09-01T08:26:28Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2970066763
+* notice: last 14d: unq all: 17 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 557 2367 / 587 2412
+* notice: next accum: outdated-unq outdated-all / unq all: 558 2368 / 588 2413
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-08-18] / [2022-09-01]
+
 2022-09-01T01:56:12Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2968336113
 * notice: last 14d: unq all: 18 45
